test/compile_errors/err_lock_guard_struct_storage.w
//! expect-check-fail: ephemeral

use std.sync

type BadMutexGuardBox {
    guard: MutexGuard,
}

type BadRwGuardBox {
    guard: RwWriteGuard,
}

fn main:
    ()
